samples/_failures_safe/1761129931_b295b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d89f7a19.c: In function ‘main’:
./samples/SAFE/__tmp_d89f7a19.c:183:16: error: missing terminating " character
  183 |         printf("Invalid
      |                ^~~~~~~~
./samples/SAFE/__tmp_d89f7a19.c:183:9: error: expected expression at end of input
  183 |         printf("Invalid
      |         ^~~~~~
./samples/SAFE/__tmp_d89f7a19.c:183:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d89f7a19.c:183:9: error: expected declaration or statement at end of input
